--- a/inc/navbar.html
+++ b/inc/navbar.html
@@ -12,8 +12,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="games.php">Games</a>
-          <a class="dropdown-item" href="players.php">Players</a>
-          <a class="dropdown-item" href="presentors.php">Presentors</a>
+          <a class="dropdown-item" href="players.php">Players and Presentors</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="cc.php">Content Creator</a>
         </div>
